--- a/.github/workflows/draft_stable_arm.yml
+++ b/.github/workflows/draft_stable_arm.yml
@@ -35,6 +35,7 @@ jobs:
           sudo apt install make -y
           sudo apt install ninja-build -y
           sudo apt install libpixman-1-dev -y
+          sudo apt-get install libglib2.0-dev -y
           wget https://download.qemu.org/qemu-7.0.0.tar.xz
           tar xvJf qemu-7.0.0.tar.xz
           cd qemu-7.0.0
@@ -67,37 +68,64 @@ jobs:
           path: ./src-next/.next
           key: ${{ hashFiles('./src-next/package-lock.json') }}
 
-      - uses: pguyot/arm-runner-action@v2.6.5
+      - name: Build app
+        uses: pguyot/arm-runner-action@v2.6.5
         with:
-          base_image: https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye.img.xz
+          base_image: dietpi:rpi_armv7_bookworm
           cpu: cortex-a53
           bind_mount_repository: true
           image_additional_mb: 10240
           optimize_image: no
+          #exit_on_fail: no
           commands: |
-            # Rust complains (rightly) that $HOME doesn't match eid home
+            # Prevent Rust from complaining about $HOME not matching eid home
             export HOME=/root
             # Workaround to CI worker being stuck on Updating crates.io index
             export CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
             # Install setup prerequisites
             apt-get update -y --allow-releaseinfo-change
-            apt-get upgrade -y
             apt-get autoremove -y
-            apt-get install curl
+            apt-get install -y --no-install-recommends --no-install-suggests curl libwebkit2gtk-4.1-dev build-essential libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf libfuse2 file
             curl https://sh.rustup.rs -sSf | sh -s -- -y
             . "$HOME/.cargo/env"
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash
-            # Install framework specific packages
+            curl -fsSL https://deb.nodesource.com/setup_lts.x | bash
             apt-get install -y nodejs
-            # npm install next@latest react@latest react-dom@latest eslint-config-next@latest
-            # Install build tools and tauri-cli requirements
-            apt-get install -yf file libdbus-1-dev libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
-            apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
-            # cargo install tauri-cli
             # Install frontend dependencies
             npm install
             # Build the application
             npm run tauri build -- --verbose
+
+      # - uses: pguyot/arm-runner-action@v2.6.5
+      #   with:
+      #     base_image: https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye.img.xz
+      #     cpu: cortex-a53
+      #     bind_mount_repository: true
+      #     image_additional_mb: 10240
+      #     optimize_image: no
+      #     commands: |
+      #       # Rust complains (rightly) that $HOME doesn't match eid home
+      #       export HOME=/root
+      #       # Workaround to CI worker being stuck on Updating crates.io index
+      #       export CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
+      #       # Install setup prerequisites
+      #       apt-get update -y --allow-releaseinfo-change
+      #       apt-get upgrade -y
+      #       apt-get autoremove -y
+      #       apt-get install curl
+      #       curl https://sh.rustup.rs -sSf | sh -s -- -y
+      #       . "$HOME/.cargo/env"
+      #       curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash
+      #       # Install framework specific packages
+      #       apt-get install -y nodejs
+      #       # npm install next@latest react@latest react-dom@latest eslint-config-next@latest
+      #       # Install build tools and tauri-cli requirements
+      #       apt-get install -yf file libdbus-1-dev libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+      #       apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
+      #       # cargo install tauri-cli
+      #       # Install frontend dependencies
+      #       npm install
+      #       # Build the application
+      #       npm run tauri build -- --verbose
 
       - name: Test if release already exists
         id: release-exists
@@ -105,6 +133,7 @@ jobs:
         run: gh release view $VERSION-$CHANNEL
         env:
           GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
+
       - name: Create draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
         run: |
