--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,18 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apk add --update alpine-sdk musl-dev g++ make openssl-dev git perl build-base dpkg bash nodejs npm
+          # Base toolchain and essentials
+          apk add --update \
+            alpine-sdk \
+            musl-dev \
+            g++ \
+            make \
+            git \
+            perl \
+            dpkg \
+            bash \
+            pkgconf \
+            openssl-dev
           rustup target add x86_64-unknown-linux-musl
 
       - name: Install Node.js LTS
@@ -54,15 +65,31 @@ jobs:
       - name: Install Tauri dependencies
         run: |
           apk add --no-cache ca-certificates curl gnupg libstdc++ libgcc
+          # GUI stack needed by Tauri (WebKitGTK + GTK3 and friends)
           apk add --no-cache \
-          build-base \
-          webkit2gtk-4.1-dev \
-          curl \
-          wget \
-          file \
-          openssl \
-          libayatana-appindicator-dev \
-          librsvg
+            build-base \
+            curl \
+            wget \
+            file \
+            # Core graphics/text stack
+            gtk+3.0-dev \
+            webkit2gtk-4.1-dev \
+            glib-dev \
+            pango-dev \
+            cairo-dev \
+            gdk-pixbuf-dev \
+            harfbuzz-dev \
+            atk-dev \
+            libsoup3-dev \
+            zlib-dev \
+            fribidi-dev \
+            librsvg
+
+      - name: Disable static CRT for musl linking
+        run: |
+          echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+          echo "PKG_CONFIG_SYSROOT_DIR=/" >> $GITHUB_ENV
 
       - name: Install node dependencies
         run: npm install
