--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,8 @@ jobs:
             bash \
             pkgconf \
             openssl-dev
+            nodejs \
+            npm
           rustup target add x86_64-unknown-linux-musl
 
       - name: Install Node.js LTS
