--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
             dpkg \
             bash \
             pkgconf \
-            openssl-dev
+            openssl-dev \
             nodejs \
             npm
           rustup target add x86_64-unknown-linux-musl
