fix: build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,8 @@ jobs:
             libsoup3-dev \
             zlib-dev \
             fribidi-dev \
-            librsvg
+            librsvg \
+            libayatana-appindicator-dev
 
       - name: Disable static CRT for musl linking
         run: |
