--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,6 @@ jobs:
       fail-fast: true
 
     runs-on: ubuntu-latest
-    container: rust:1.90.0-alpine3.22
 
     steps:
       - name: Checkout repository code
@@ -37,26 +36,8 @@ jobs:
       # Cache Next.js
       - uses: actions/cache@v3
         with:
-          path: ./src-next/.next
+          path: ./.next
           key: ubuntu-latest
-
-      - name: Install dependencies
-        run: |
-          # Base toolchain and essentials
-          apk add --update \
-            alpine-sdk \
-            musl-dev \
-            g++ \
-            make \
-            git \
-            perl \
-            dpkg \
-            bash \
-            pkgconf \
-            openssl-dev \
-            nodejs \
-            npm
-          rustup target add x86_64-unknown-linux-musl
 
       - name: Install Node.js LTS
         uses: actions/setup-node@v3
@@ -66,27 +47,10 @@ jobs:
 
       - name: Install Tauri dependencies
         run: |
-          apk add --no-cache ca-certificates curl gnupg libstdc++ libgcc
-          # GUI stack needed by Tauri (WebKitGTK + GTK3 and friends)
-          apk add --no-cache \
-            build-base \
-            curl \
-            wget \
-            file \
-            gtk+3.0-dev \
-            webkit2gtk-4.1-dev \
-            glib-dev \
-            pango-dev \
-            cairo-dev \
-            gdk-pixbuf-dev \
-            harfbuzz-dev \
-            libsoup3-dev \
-            zlib-dev \
-            fribidi-dev \
-            librsvg \
-            libayatana-appindicator-dev
+          sudo apt-get update
+          sudo apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
 
-      - name: Disable static CRT for musl linking
+      - name: Enable static CRT
         run: |
           echo "RUSTFLAGS=-C target-feature=+crt-static" >> $GITHUB_ENV
           echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
@@ -96,4 +60,4 @@ jobs:
         run: npm install
 
       - name: Build application
-        run: npm run tauri build -- --verbose --target x86_64-unknown-linux-musl
+        run: npm run tauri build -- --verbose
