fix: build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,9 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
+      - name: Install Rust with Clippy
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Install Tauri dependencies
         run: |
           sudo apt-get update
