--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,4 +63,4 @@ jobs:
         run: npm install
 
       - name: Build application
-        run: npm run tauri build -- --verbose
+        run: npm run tauri build -- --verbose --target x86_64-unknown-linux-gnu
