--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,13 +45,28 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
-      - name: Install Rust with Clippy
+      - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
       - name: Install Tauri dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
+          sudo apt-get install -y build-essential pkg-config
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libwebkit2gtk-4.1-dev \
+            libjavascriptcoregtk-4.1-dev \
+            libsoup-3.0-dev \
+            libpango1.0-dev \
+            libcairo2-dev \
+            libgdk-pixbuf-2.0-dev \
+            libharfbuzz-dev \
+            libatk1.0-dev \
+            libglib2.0-dev \
+            zlib1g-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev \
+            libssl-dev
 
       - name: Enable static CRT
         run: |
