--- a/.github/workflows/draft_stable_arm.yml
+++ b/.github/workflows/draft_stable_arm.yml
@@ -1,4 +1,4 @@
-name: Draft stable arm
+name: Draft stable
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
 
 jobs:
   draft_stable:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-arm
 
     steps:
       - uses: actions/checkout@v3
@@ -29,20 +29,6 @@ jobs:
           echo $GITHUB_REF
           echo $CHANNEL
           echo $VERSION
-          sudo apt update && sudo apt upgrade -y
-          sudo apt install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils virt-manager qemu-system-arm -y
-          sudo apt install -y qemu-user-static binfmt-support
-          sudo apt install make -y
-          sudo apt install ninja-build -y
-          sudo apt install libpixman-1-dev -y
-          sudo apt-get install libglib2.0-dev -y
-          wget https://download.qemu.org/qemu-7.0.0.tar.xz
-          tar xvJf qemu-7.0.0.tar.xz
-          cd qemu-7.0.0
-          ./configure
-          make
-          docker run --privileged --rm tonistiigi/binfmt --install all
-          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes -c yes
 
       # Cache Rust
       - uses: actions/cache@v3
@@ -68,64 +54,25 @@ jobs:
           path: ./src-next/.next
           key: ${{ hashFiles('./src-next/package-lock.json') }}
 
-      - name: Build app
-        uses: pguyot/arm-runner-action@v2.6.5
-        with:
-          base_image: dietpi:rpi_armv7_bookworm
-          cpu: cortex-a53
-          bind_mount_repository: true
-          image_additional_mb: 10240
-          optimize_image: no
-          #exit_on_fail: no
-          commands: |
-            # Prevent Rust from complaining about $HOME not matching eid home
-            export HOME=/root
-            # Workaround to CI worker being stuck on Updating crates.io index
-            export CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
-            # Install setup prerequisites
-            apt-get update -y --allow-releaseinfo-change
-            apt-get autoremove -y
-            apt-get install -y --no-install-recommends --no-install-suggests curl libwebkit2gtk-4.1-dev build-essential libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf libfuse2 file
-            curl https://sh.rustup.rs -sSf | sh -s -- -y
-            . "$HOME/.cargo/env"
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | bash
-            apt-get install -y nodejs
-            # Install frontend dependencies
-            npm install
-            # Build the application
-            npm run tauri build -- --verbose
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
 
-      # - uses: pguyot/arm-runner-action@v2.6.5
-      #   with:
-      #     base_image: https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye.img.xz
-      #     cpu: cortex-a53
-      #     bind_mount_repository: true
-      #     image_additional_mb: 10240
-      #     optimize_image: no
-      #     commands: |
-      #       # Rust complains (rightly) that $HOME doesn't match eid home
-      #       export HOME=/root
-      #       # Workaround to CI worker being stuck on Updating crates.io index
-      #       export CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
-      #       # Install setup prerequisites
-      #       apt-get update -y --allow-releaseinfo-change
-      #       apt-get upgrade -y
-      #       apt-get autoremove -y
-      #       apt-get install curl
-      #       curl https://sh.rustup.rs -sSf | sh -s -- -y
-      #       . "$HOME/.cargo/env"
-      #       curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash
-      #       # Install framework specific packages
-      #       apt-get install -y nodejs
-      #       # npm install next@latest react@latest react-dom@latest eslint-config-next@latest
-      #       # Install build tools and tauri-cli requirements
-      #       apt-get install -yf file libdbus-1-dev libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
-      #       apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
-      #       # cargo install tauri-cli
-      #       # Install frontend dependencies
-      #       npm install
-      #       # Build the application
-      #       npm run tauri build -- --verbose
+      - name: Install Tauri dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
+
+      - name: Enable static CRT
+        run: |
+          echo "RUSTFLAGS=-C target-feature=+crt-static" >> $GITHUB_ENV
+          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+          echo "PKG_CONFIG_SYSROOT_DIR=/" >> $GITHUB_ENV
+
+      - name: Install node dependencies
+        run: npm install
+
+      - name: Build application
+        run: npm run tauri build
 
       - name: Test if release already exists
         id: release-exists
@@ -133,7 +80,6 @@ jobs:
         run: gh release view $VERSION-$CHANNEL
         env:
           GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
-
       - name: Create draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
         run: |
@@ -141,25 +87,24 @@ jobs:
             $VERSION-$CHANNEL \
             -t $VERSION-$CHANNEL \
             -F ./CHANGELOG.md \
-            ./src-tauri/target/release/bundle/deb/wireguard-gui_${VERSION}_arm64.deb#wireguard-gui_arm64.deb \
-            ./src-tauri/target/release/bundle/appimage/wireguard-gui_${VERSION}_aarch64.AppImage#wireguard-gui_aarch64.AppImage
+            ./src-tauri/target/release/bundle/deb/wireguard-gui_${VERSION}_amd64.deb#wireguard-gui_amd64.deb \
+            ./src-tauri/target/release/bundle/appimage/wireguard-gui_${VERSION}_amd64.AppImage#wireguard-gui_amd64.AppImage
         env:
           GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
-
       - name: Update draft release
         if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
         run: |
           gh release delete-asset -y \
             $VERSION-$CHANNEL \
-            wireguard-gui_${VERSION}_arm64.deb || true
+            wireguard-gui_${VERSION}_amd64.deb || true
           gh release delete-asset -y \
             $VERSION-$CHANNEL \
-            wireguard-gui_${VERSION}_arm64.AppImage|| true
+            wireguard-gui_${VERSION}_amd64.AppImage|| true
           gh release upload \
             $VERSION-$CHANNEL \
-            ./src-tauri/target/release/bundle/deb/wireguard-gui_${VERSION}_arm64.deb#wireguard-gui_arm64.deb
+            ./src-tauri/target/release/bundle/deb/wireguard-gui_${VERSION}_amd64.deb#wireguard-gui_amd64.deb
           gh release upload \
             $VERSION-$CHANNEL \
-            ./src-tauri/target/release/bundle/appimage/wireguard-gui_${VERSION}_arm64.AppImage#wireguard-gui_arm64.AppImage
+            ./src-tauri/target/release/bundle/appimage/wireguard-gui_${VERSION}_amd64.AppImage#wireguard-gui_amd64.AppImage
         env:
           GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
