--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,28 +51,13 @@ jobs:
       - name: Install Tauri dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential pkg-config
-          sudo apt-get install -y \
-            libgtk-3-dev \
-            libwebkit2gtk-4.1-dev \
-            libjavascriptcoregtk-4.1-dev \
-            libsoup-3.0-dev \
-            libpango1.0-dev \
-            libcairo2-dev \
-            libgdk-pixbuf-2.0-dev \
-            libharfbuzz-dev \
-            libatk1.0-dev \
-            libglib2.0-dev \
-            zlib1g-dev \
-            libayatana-appindicator3-dev \
-            librsvg2-dev \
-            libssl-dev
+          sudo apt-get install javascriptcoregtk-4.1 libsoup-3.0 webkit2gtk-4.1 libayatana-appindicator3-dev librsvg2-dev -y
 
-      - name: Enable static CRT
-        run: |
-          echo "RUSTFLAGS=-C target-feature=+crt-static" >> $GITHUB_ENV
-          echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
-          echo "PKG_CONFIG_SYSROOT_DIR=/" >> $GITHUB_ENV
+      # - name: Enable static CRT
+      #   run: |
+      #     echo "RUSTFLAGS=-C target-feature=+crt-static" >> $GITHUB_ENV
+      #     echo "PKG_CONFIG_ALLOW_CROSS=1" >> $GITHUB_ENV
+      #     echo "PKG_CONFIG_SYSROOT_DIR=/" >> $GITHUB_ENV
 
       - name: Install node dependencies
         run: npm install
